'/users/{u_id}' -> '/me'
