# src/Controller/Response/CommonErrorCodeConstant.php
@@ -7,11 +7,9 @@ use Symfony\Component\HttpFoundation\Response;
 
 class CommonErrorCodeConstant
 {
-    public const UNAUTHORIZED = 'UNAUTHORIZED';
     public const INTERNAL_SERVER_ERROR = 'INTERNAL_SERVER_ERROR';
 
     public const HTTP_STATUS_CODES = [
-        self::UNAUTHORIZED => Response::HTTP_UNAUTHORIZED,
         self::INTERNAL_SERVER_ERROR => Response::HTTP_INTERNAL_SERVER_ERROR
     ];
 }
